name:                atomweb
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/liskin/atomweb#readme
license:             BSD3
license-file:        LICENSE
author:              Tomáš Janoušek
maintainer:          tomi@nomi.cz
copyright:           2016 Tomáš Janoušek
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/liskin/atomweb

executable atomweb
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:
    Main.Options
  build-depends:
      base
    , blaze-builder
    , data-default
    , http-types
    , optparse-applicative
    , text
    , wai
    , wai-extra
    , warp
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
